[package]
name = "bevy_simple_scrollbar"
version = "0.1.0"
edition = "2024"
license = "WTFPL"
keywords = ["bevy", "ui", "scrollbar", "simple"]
exclude = ["/target"]

[lib]
name = "bevy_simple_scrollbar"

[dependencies]
bevy = "0.15.3"
log = "0.4.27"
pretty_env_logger = "0.5.0"

[[example]]
name = "simple"
path = "examples/simple.rs"